- 🗲 Breaking: Remove commandline argument `--mode {parse,raw}` in favor of a new
argument `--parse-text {True, False}`.
- Add option `--screenshot-handler` to explicitly choose among available methods.
- Add QR and BarCode detection (optional).

**Windows:**
- Add automatic export of debug logs (when running `normcap.exe -v debug`) to `{DESKTOP_FOLDER}\normcap.log` for easier access.

**Linux:**
- 🗲 Breaking: Drop support for Ubuntu 20.04 and Gnome < 41.0
- Change priority of clipboard handlers: `wl-clipboard` is now lowest priority (as it seems least reliable), below `xsel` and `xclip`. (Please [open an issues](https://github.com/dynobo/normcap/issues/new/choose), if this doesn't work well for you.)
- Add experimental support for clickable notification (if `send-notify` is available).
- Add handlers to take screenshots via `gnome-screenshot` or `spectacle`. Should mitigate some issue for screenshots on Wayland (not all!).
- Fix AppImage requires `libcrypt`, which is not the case anymore.
- Fix NormCap not getting focus when moved with Gnome extension "Window Calls"

## v0.5.9 (2024-11-10)

- All: Add Chinese translation. Thanks, [@mofazhe](https://github.com/mofazhe)! ([#661](https://github.com/dynobo/normcap/pull/661))
- All: Add Portuguese translation. Thanks, ssantos!
- Windows: Add portable package. Thanks, [@mofazhe](https://github.com/mofazhe)! ([#660](https://github.com/dynobo/normcap/pull/660), [#671](https://github.com/dynobo/normcap/pull/671))
- macOS: Drop support for macOS 12 (end of life).

## v0.5.8 (2024-05-19)

- Linux: Next try to fix issue on Ubuntu/Unity where the window doesn't show up. ([#651](https://github.com/dynobo/normcap/pull/651))

## v0.5.7 (2024-05-18)

- All: Add french translation. Thanks, [@NathanBnm](https://github.com/NathanBnm)! ([#648](https://github.com/dynobo/normcap/pull/648))